Font sizeを変更できるようにした

--- a/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
@@ -410,21 +410,35 @@ conjunction with external applications, other popular file formats also view</p>
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>You
-can copy, cut between the local storage and the ZIP file</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Simple
+File Manager</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Search
-the file name(In the results list to display the directory when you tap the
-file name)</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>You
+can copy and cut files in the local folder(*1)</p>
+
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>You
+can copy and cut between local and zip folders</p>
+
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>File
+name search in local and zip folders</p>
+
+<p class=MsoNormal style='margin-left:18.0pt'>*1 Local storage indicates
+internal storage, MicroSD and USB Flash.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal><span style='font-size:12.0pt'>How to use, you can either tap
-the ZIP file with a tiny file manager, please select the ZipUtility3 from the
-app to open tap the ZIP file in the other file manager.</span></p>
+<p class=MsoNormal><span style='font-size:12.0pt'>How to use, you can either
+tap the ZIP file with a tiny file manager, please select the ZipUtility3 from
+the app to open tap the ZIP file in the other file manager.</span></p>
 
 <h1 style='margin-top:18.0pt'><span style='text-decoration:none'>2.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Screen
@@ -513,7 +527,7 @@ item (the clipped item will be deleted when the pasting is complete)</span></p>
 
 <p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=19 height=19
-id="} 8" src="ZipUtility3_Desc_EN_Short.files/image016.png"
+id="} 8" src="ZipUtility3_Desc_EN_Short.files/image008.png"
 alt="context_button_copy"><span class=1105pt>&nbsp;Copy the selected items.</span></span></p>
 
 <p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
@@ -522,7 +536,7 @@ src="ZipUtility3_Desc_EN_Short.files/image009.png" alt="context_button_cut"><spa
 class=1105pt>&nbsp;Cut the selected items.</span></span></p>
 
 <p class=MsoNormal><span class=1105pt><img width=22 height=22 id="} 17"
-src="ZipUtility3_Desc_EN_Short.files/image017.png">&nbsp;Extract the selected
+src="ZipUtility3_Desc_EN_Short.files/image016.png">&nbsp;Extract the selected
 items</span></p>
 
 <p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
