--- a/app/src/main/assets/ZipUtility3_Desc_FR_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_FR_Short.htm
@@ -397,20 +397,30 @@ populaires</p>
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Gestionnaire
-de fichiers simple pour le stockage local</p>
+de fichiers simple</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Vous
-pouvez copier et couper entre le stockage local et les fichiers ZIP</p>
+pouvez copier et couper des fichiers dans le dossier local(*1).</p>
+
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Vous
+pouvez copier et couper entre les dossiers locaux et les dossiers zip</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Recherche
-de noms de fichiers dans le stockage local et les fichiers ZIP (en tapant sur
-un nom de fichier dans la liste des r&eacute;sultats, le r&eacute;pertoire s'affiche)</p>
+de nom de fichier dans les dossiers locaux et zip</p>
+
+<p class=MsoNormal style='margin-left:18.0pt'>*1 Le stockage local indique le
+stockage interne, le MicroSD et le Flash USB.</p>
+
+<p class=MsoNormal style='margin-left:18.0pt'>&nbsp;</p>
 
 <p class=MsoNormal><span style='font-size:12.0pt'>Touchez un fichier ZIP dans
 un simple gestionnaire de fichiers ou dans un autre gestionnaire de fichiers et
