--- a/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
@@ -327,7 +327,7 @@ style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>パスワード保護</span>(Zip<span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>標準</span>,AES128<span lang=JA
+style='font-family:"ＭＳ 明朝","serif"'>標準</span>, AES128<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>および</span>AES256<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>ビット暗号化</span>)<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>された</span> Zip<span lang=JA
@@ -362,22 +362,34 @@ lang=JA style='font-family:"ＭＳ 明朝","serif"'>外部アプリと連携して、他の一般的
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージ用の簡易ファイルマネージャー</span></p>
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>簡易ファイルマネージャー</span></p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージと</span>ZIP<span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>ファイルとの間でコピー・カットができます</span></p>
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルフォルダー</span>(*1)<span lang=JA
+style='font-family:"ＭＳ 明朝","serif"'>内でコピー・カットができます</span></p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージと</span>ZIP<span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>ファイルでファイル名の検索</span>(<span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>結果リストでファイル名をタップするとディレクトリを表示します）</span></p>
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルフォルダーと</span>ZIP<span lang=JA
+style='font-family:"ＭＳ 明朝","serif"'>フォルダーとの間でコピー・カットができます</span></p>
+
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルフォルダーと</span>ZIP<span lang=JA
+style='font-family:"ＭＳ 明朝","serif"'>フォルダーでファイル名検索</span></p>
+
+<p class=MsoNormal style='margin-left:18.0pt'><span style='font-size:10.5pt'>*1
+</span><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>ローカルストレージは内部ストレージ、</span><span
+style='font-size:10.5pt'>MicroSD</span><span lang=JA style='font-size:10.5pt;
+font-family:"ＭＳ 明朝","serif"'>と</span><span style='font-size:10.5pt'>USB Flash</span><span
+lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>を示します。</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
