--- a/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
@@ -534,18 +534,30 @@ lang=JA style='font-family:"ＭＳ ゴシック"'>使用ライブラリー</span></h1>
 
 <p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>下記のライブラリーを使用しています。</span></p>
 
-<p class=MsoListParagraph style='margin-left:48.0pt'><a
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><a
 href="https://code.google.com/archive/p/juniversalchardet/">juniversalchardet
 1.0.3</a></p>
 
-<p class=MsoListParagraph style='margin-left:48.0pt'><a
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><a
 href="http://www.lingala.net/zip4j.html">Zip4J 2.2.3</a></p>
 
-<p class=MsoListParagraph style='margin-left:48.0pt'><a
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><a
 href="https://commons.apache.org/proper/commons-compress/index.html">Apache
 Commons Compress 1.20</a></p>
 
-<p class=MsoListParagraph style='margin-left:48.0pt'><a
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><a
 href="https://tukaani.org/xz/java.html">XZ-1.8</a></p>
 
 <p class=MsoNormal>&nbsp;</p>
