--- a/app/src/main/assets/ZipUtility3_Privacy_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_EN.htm
@@ -289,46 +289,45 @@ ul
 
 <p class=MsoToc1>Privacy Policy</p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc36731871">1.Send
-recorded data from the app<span style='color:windowtext;display:none;
+<p class=MsoToc1><a href="#_Toc51664877">1.Send recorded data from the app<span
+style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>2</span></a></p>
+
+<p class=MsoToc1><a href="#_Toc51664878">2.Data recorded by the app<span
+style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
+
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664879">2.1.App
+activity record<span style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
+
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664880">2.2 Use of
+the data sent to the app developer<span style='color:windowtext;display:none;
 text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>2</span></a></span></p>
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc36731872">2.Data
-recorded by the app<span style='color:windowtext;display:none;text-decoration:
-none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>3</span></a></span></p>
-
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc36731873">2.1.App activity record<span style='color:windowtext;
+<p class=MsoToc1><a href="#_Toc51664881">3. Permissions<span style='color:windowtext;
 display:none;text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>3</span></a></span></p>
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc36731874">3.
-Permissions<span style='color:windowtext;display:none;text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664882">3.1.Photos/Media/Files<span
+style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc36731875">3.1.Photos/Media/Files<span style='color:windowtext;
-display:none;text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664883">3.2.Storage<span
+style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc36731876">3.2.Storage<span style='color:windowtext;display:none;
-text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664884">3.3.Others<span
+style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc36731877">3.3.Others<span style='color:windowtext;display:none;
-text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
-
-<h1 style='margin-top:18.0pt'><a name="_Toc36731871">1.Send recorded data from
+<h1 style='margin-top:18.0pt'><a name="_Toc51664877">1.Send recorded data from
 the app</a></h1>
 
 <p class=MsoNormal>Data recorded by the app can be sent by the following app
-operation. The recorded data will not be sent to the outside of the app unless
-the user operates it.</p>
+operation. <b><u><span style='color:red'>The recorded data will not be sent to
+the outside of the app unless the user operates it.</span></u></b></p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -342,12 +341,12 @@ src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt 
 </span></span>Press &quot;Share button&quot; or &quot;Send to developer&quot;
 button from log management</p>
 
-<h1 style='margin-top:18.0pt'><a name="_Toc36731872">2.Data recorded by the app</a></h1>
+<h1 style='margin-top:18.0pt'><a name="_Toc51664878">2.Data recorded by the app</a></h1>
 
 <p class=MsoNormal>The recorded data will not be sent to the outside of the app
 unless the user operates it.</p>
 
-<h2 style='margin-top:18.0pt'><a name="_Toc36731873"></a><a
+<h2 style='margin-top:18.0pt'><a name="_Toc51664879"></a><a
 name="_2.1_Synchronization_task"></a>2.1.App activity record</h2>
 
 <p class=MsoNormal>Record the data of the following items to verify that the
@@ -372,7 +371,8 @@ src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>System setting value</p>
+</span></span>System setting value<span lang=JA style='font-family:"ÇlÇr ñæí©","serif"'>Åi</span>Battery
+optimization, Storage information<span lang=JA style='font-family:"ÇlÇr ñæí©","serif"'>Åj</span></p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -381,13 +381,18 @@ src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt 
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal>&nbsp;</p>
+<h2 style='margin-top:18.0pt'><a name="_Toc51664880">2.2 Use of the data sent
+to the app developer</a></h2>
 
-<h1 style='margin-top:18.0pt'><a name="_Toc36731874">3. Permissions</a></h1>
+<p class=MsoNormal>The data sent to the app developer will be used to solve the
+app's problems. <b><u><span style='color:red'>The data will not be disclosed to
+anyone other than the developer.</span></u></b></p>
+
+<h1 style='margin-top:18.0pt'><a name="_Toc51664881">3. Permissions</a></h1>
 
 <p class=MsoNormal>The app uses the following permissions.</p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc36731875">3.1.Photos/Media/Files</a></p>
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664882">3.1.Photos/Media/Files</a></p>
 
 <p class=MsoNormal>-read the contents of your USB storage</p>
 
@@ -398,7 +403,7 @@ internal/external storage.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc36731876">3.2.Storage</a></p>
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664883">3.2.Storage</a></p>
 
 <p class=MsoNormal>-read the contents of your USB storage</p>
 
@@ -407,7 +412,7 @@ internal/external storage.</p>
 <p class=MsoNormal>Used to create, rename, and delete files and directories in internal/external
 storage.</p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc36731877">3.3.Others</a></p>
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664884">3.3.Others</a></p>
 
 <p class=MsoNormal>-prevent device from sleeping</p>
 
