--- a/app/src/main/assets/ZipUtility3_Privacy_FR.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_FR.htm
@@ -292,48 +292,50 @@ ul
 
 <p class=MsoToc1>Politique de confidentialit&eacute;</p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc38807750">1. Envoi de
-donn&eacute;es &agrave; partir de l'application<span style='color:windowtext;display:none;
-text-decoration:none'>.. </span><span
-style='color:windowtext;display:none;text-decoration:none'>2</span></a></span></p>
+<p class=MsoToc1><a href="#_Toc51664856">1. Envoi de donn&eacute;es &agrave; partir de
+l'application<span style='color:windowtext;display:none;text-decoration:none'>.. </span><span
+style='color:windowtext;display:none;text-decoration:none'>2</span></a></p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc38807751">2. Donn&eacute;es
-enregistr&eacute;es par l'application<span style='color:windowtext;display:none;
-text-decoration:none'>.. </span><span
-style='color:windowtext;display:none;text-decoration:none'>3</span></a></span></p>
+<p class=MsoToc1><a href="#_Toc51664857">2. Donn&eacute;es enregistr&eacute;es par
+l'application<span style='color:windowtext;display:none;text-decoration:none'>.. </span><span
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc38807752">2.1fiche d'activit&eacute; de la demande<span style='color:windowtext;
-display:none;text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>3</span></a></span></p>
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664858">2.1fiche
+d'activit&eacute; de la demande<span style='color:windowtext;display:none;text-decoration:
+none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc38807753">3. Autorit&eacute;
-requise<span style='color:windowtext;display:none;text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664859">2.2
+Utilisation des donn&eacute;es envoy&eacute;es au d&eacute;veloppeur de l'application<span
+style='color:windowtext;display:none;text-decoration:none'>.. </span><span
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc38807754">3.1. Photos, m&eacute;dias et fichiers<span style='color:windowtext;
-display:none;text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+<p class=MsoToc1><a href="#_Toc51664860">3. Autorit&eacute; requise<span
+style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc38807755">3.2. stockage<span style='color:windowtext;display:none;
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664861">3.1.
+Photos, m&eacute;dias et fichiers<span style='color:windowtext;display:none;
 text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc38807756">3.3. les autres<span style='color:windowtext;display:none;
-text-decoration:none'>. </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664862">3.2.
+stockage<span style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
+
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664863">3.3. les
+autres<span style='color:windowtext;display:none;text-decoration:none'>. </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
 <h1 style='margin-top:18.0pt'><span style='font-size:12.0pt'><a
-name="_Toc38807750"></a><a name="_アプリが記録するデータ"></a>1</span>. Envoi de donn&eacute;es &agrave;
+name="_Toc51664856"></a><a name="_アプリが記録するデータ"></a>1</span>. Envoi de donn&eacute;es &agrave;
 partir de l'application</h1>
 
 <p class=MsoNormal>Les donn&eacute;es enregistr&eacute;es par l'application peuvent &ecirc;tre
 envoy&eacute;es par courrier &eacute;lectronique en utilisant les op&eacute;rations suivantes de
-l'application. Les donn&eacute;es enregistr&eacute;es ne seront pas envoy&eacute;es au monde
-ext&eacute;rieur par l'application sans que l'utilisateur n'ait &agrave; intervenir.</p>
+l'application. <b><u><span style='color:red'>Les donn&eacute;es enregistr&eacute;es ne seront
+pas envoy&eacute;es au monde ext&eacute;rieur par l'application sans que l'utilisateur n'ait
+&agrave; intervenir.</span></u></b></p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -349,13 +351,13 @@ d&eacute;veloppeur&quot; &agrave; partir de la gestion du journal.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<h1 style='margin-top:18.0pt'><a name="_Toc38807751">2. Donn&eacute;es enregistr&eacute;es
+<h1 style='margin-top:18.0pt'><a name="_Toc51664857">2. Donn&eacute;es enregistr&eacute;es
 par l'application</a></h1>
 
 <p class=MsoNormal>Les donn&eacute;es enregistr&eacute;es ne seront pas envoy&eacute;es au monde
 ext&eacute;rieur par l'application sans intervention de l'utilisateur.</p>
 
-<h2 style='margin-top:18.0pt'><a name="_Toc38807752"></a><a name="_2.1同期タスクリスト"></a>2.1fiche
+<h2 style='margin-top:18.0pt'><a name="_Toc51664858"></a><a name="_2.1同期タスクリスト"></a>2.1fiche
 d'activit&eacute; de la demande</h2>
 
 <p class=MsoNormal>Les donn&eacute;es suivantes sont enregistr&eacute;es afin de v&eacute;rifier que
@@ -381,7 +383,8 @@ src="ZipUtility3_Privacy_FR.files/image001.png" alt="*"><span style='font:7.0pt 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Privacy_FR.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span>valeur fix&eacute;e par le syst&egrave;me</p>
+</span></span>valeur fix&eacute;e par le syst&egrave;me<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>（</span>Battery
+optimization, Storage information<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>）</span></p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -390,13 +393,19 @@ src="ZipUtility3_Privacy_FR.files/image001.png" alt="*"><span style='font:7.0pt 
 
 <p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal>&nbsp;</p>
+<h2 style='margin-top:18.0pt'><a name="_Toc51664859">2.2 Utilisation des
+donn&eacute;es envoy&eacute;es au d&eacute;veloppeur de l'application</a></h2>
 
-<h1 style='margin-top:18.0pt'><a name="_Toc38807753">3. Autorit&eacute; requise</a></h1>
+<p class=MsoNormal>Les donn&eacute;es envoy&eacute;es au d&eacute;veloppeur de l'application seront
+utilis&eacute;es pour r&eacute;soudre les probl&egrave;mes de l'application. <b><u><span
+style='color:red'>Les donn&eacute;es ne seront divulgu&eacute;es &agrave; personne d'autre que le
+d&eacute;veloppeur.</span></u></b></p>
+
+<h1 style='margin-top:18.0pt'><a name="_Toc51664860">3. Autorit&eacute; requise</a></h1>
 
 <p class=MsoNormal>L'application utilise les autorisations suivantes</p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc38807754">3.1. Photos,
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664861">3.1. Photos,
 m&eacute;dias et fichiers</a></p>
 
 <p class=MsoNormal>-access USB storage filesystem</p>
@@ -408,7 +417,8 @@ m&eacute;dias et fichiers</a></p>
 <p class=MsoNormal>Il est utilis&eacute; pour cr&eacute;er, renommer et supprimer des
 fichiers et des r&eacute;pertoires pour le stockage interne et externe.</p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc38807755">3.2. stockage</a></p>
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664862">3.2.
+stockage</a></p>
 
 <p class=MsoNormal>-read the contents of your USB storage</p>
 
@@ -417,7 +427,7 @@ fichiers et des r&eacute;pertoires pour le stockage interne et externe.</p>
 <p class=MsoNormal>Il est utilis&eacute; pour cr&eacute;er, renommer et supprimer des
 fichiers et des r&eacute;pertoires pour le stockage interne et externe.</p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc38807756">3.3. les
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664863">3.3. les
 autres</a></p>
 
 <p class=MsoNormal>-prevent device from sleeping</p>
