--- a/app/src/main/assets/ZipUtility3_Privacy_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_JA.htm
@@ -20,8 +20,8 @@
 	{font-family:Century;
 	panose-1:2 4 6 4 5 5 5 2 3 4;}
 @font-face
-	{font-family:Century;
-	panose-1:2 4 6 4 5 5 5 2 3 4;}
+	{font-family:"Cambria Math";
+	panose-1:2 4 5 3 5 4 6 3 2 4;}
 @font-face
 	{font-family:"MS UI Gothic";
 	panose-1:2 11 6 0 7 2 5 8 2 4;}
@@ -292,47 +292,53 @@ ul
 
 <p class=MsoToc1><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>プライバシーポリシー</span></p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc36731859">1.<span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリからのデータ送信</span><span
-style='color:windowtext;display:none;text-decoration:none'>... </span><span
-style='color:windowtext;display:none;text-decoration:none'>2</span></a></span></p>
+<p class=MsoToc1><a href="#_Toc51664847">1.<span lang=JA style='font-family:
+"ＭＳ 明朝","serif"'>アプリからのデータ送信</span><span style='color:windowtext;display:none;
+text-decoration:none'>... </span><span
+style='color:windowtext;display:none;text-decoration:none'>2</span></a></p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc36731860">2.<span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリが記録するデータ</span><span
-style='color:windowtext;display:none;text-decoration:none'>... </span><span
-style='color:windowtext;display:none;text-decoration:none'>3</span></a></span></p>
+<p class=MsoToc1><a href="#_Toc51664848">2.<span lang=JA style='font-family:
+"ＭＳ 明朝","serif"'>アプリが記録するデータ</span><span style='color:windowtext;display:none;
+text-decoration:none'>... </span><span
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc36731861">2.1<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリ稼動記録</span><span
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664849">2.1<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリ稼動記録</span><span
 style='color:windowtext;display:none;text-decoration:none'>... </span><span
-style='color:windowtext;display:none;text-decoration:none'>3</span></a></span></p>
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
 
-<p class=MsoToc1><span class=MsoHyperlink><a href="#_Toc36731862">3. <span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>必要な権限</span><span style='color:
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664850">2.2<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリ開発者に送られたデータの使用</span><span
+style='color:windowtext;display:none;text-decoration:none'>... </span><span
+style='color:windowtext;display:none;text-decoration:none'>3</span></a></p>
+
+<p class=MsoToc1><a href="#_Toc51664851">3. <span lang=JA style='font-family:
+"ＭＳ 明朝","serif"'>必要な権限</span><span style='color:windowtext;display:none;
+text-decoration:none'>... </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
+
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664852">3.1.<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>写真、メディア、ファイル</span><span
+style='color:windowtext;display:none;text-decoration:none'>... </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
+
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664853">3.2.<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ストレージ</span><span style='color:
 windowtext;display:none;text-decoration:none'>... </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc36731863">3.1.<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>写真、メディア、ファイル</span><span
-style='color:windowtext;display:none;text-decoration:none'>... </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
-
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc36731864">3.2.<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>ストレージ</span><span
-style='color:windowtext;display:none;text-decoration:none'>... </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
-
-<p class=MsoToc2 style='margin-left:12.0pt'><span class=MsoHyperlink><a
-href="#_Toc36731865">3.3.<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>その他</span><span
-style='color:windowtext;display:none;text-decoration:none'>... </span><span
-style='color:windowtext;display:none;text-decoration:none'>4</span></a></span></p>
+<p class=MsoToc2 style='margin-left:12.0pt'><a href="#_Toc51664854">3.3.<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>その他</span><span style='color:windowtext;
+display:none;text-decoration:none'>... </span><span
+style='color:windowtext;display:none;text-decoration:none'>4</span></a></p>
 
 <h1 style='margin-top:18.0pt'><span style='font-size:12.0pt'><a
-name="_Toc36731859"></a><a name="_アプリが記録するデータ"></a>1</span>.<span lang=JA
+name="_Toc51664847"></a><a name="_アプリが記録するデータ"></a>1</span>.<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>アプリからのデータ送信</span></h1>
 
 <p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリが記録したデータは下記のアプリ操作により</span>E-Mail<span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>で送信することができます。記録されたデータはユーザーの操作が無い限りアプリが外部に送信することはありません。</span></p>
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>で送信することができます。<b><u><span
+style='color:red'>記録されたデータはユーザーの操作が無い限りアプリが外部に送信することはありません。</span></u></b></span></p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -346,12 +352,10 @@ src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt 
 
 <p class=MsoNormal>&nbsp;</p>
 
-<h1 style='margin-top:18.0pt'><a name="_Toc36731860">2.</a><span lang=JA
+<h1 style='margin-top:18.0pt'><a name="_Toc51664848">2.</a><span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>アプリが記録するデータ</span></h1>
 
-<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>記録されたデータはユーザーの操作が無い限りアプリが外部に送信することはありません。</span></p>
-
-<h2 style='margin-top:18.0pt'><a name="_Toc36731861"></a><a name="_2.1同期タスクリスト"></a>2.1<span
+<h2 style='margin-top:18.0pt'><a name="_Toc51664849"></a><a name="_2.1同期タスクリスト"></a>2.1<span
 lang=JA style='font-family:"ＭＳ ゴシック"'>アプリ稼動記録</span></h2>
 
 <p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリが正常に処理した事を処理後に検証するために下記項目のデータを記録します。</span></p>
@@ -374,23 +378,30 @@ src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>システム設定値</span></p>
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>システム設定値（</span>Battery
+optimization, Storage information<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>）</span></p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリ設定値</span></p>
 
-<p class=MsoNormal>&nbsp;</p>
+<h2 style='margin-top:18.0pt'><a name="_Toc51664850">2.2</a><span lang=JA
+style='font-family:"ＭＳ ゴシック"'>アプリ開発者に送られたデータの使用</span></h2>
+
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリ開発者に送られたデーやはアプリの問題解決のために使用します。<b><u><span
+style='color:red'>データは開発者以外に開示されません。</span></u></b></span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
-<h1 style='margin-top:18.0pt'><a name="_Toc36731862">3. </a><span lang=JA
+<p class=MsoNormal>&nbsp;</p>
+
+<h1 style='margin-top:18.0pt'><a name="_Toc51664851">3. </a><span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>必要な権限</span></h1>
 
 <p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリでは下記の権限を使用しています。</span></p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc36731863">3.1.</a><span
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664852">3.1.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>写真、メディア、ファイル</span></p>
 
 <p class=MsoNormal>-access USB storage filesystem</p>
@@ -401,7 +412,7 @@ lang=JA style='font-family:"ＭＳ ゴシック"'>写真、メディア、ファイル</span></p>
 
 <p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージと外部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc36731864">3.2.</a><span
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664853">3.2.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>ストレージ</span></p>
 
 <p class=MsoNormal>-read the contents of your USB storage</p>
@@ -410,7 +421,7 @@ lang=JA style='font-family:"ＭＳ ゴシック"'>ストレージ</span></p>
 
 <p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージと外部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
 
-<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc36731865">3.3.</a><span
+<p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc51664854">3.3.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>その他</span></p>
 
 <p class=MsoNormal>-prevent device from sleeping</p>
